--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Arthur Black Design</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.1/css/normalize.min.css"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.1/css/foundation.min.css"></script>
+  <link rel="stylesheet" href="app.css"/>
 </head>
 
 <body>
@@ -17,10 +19,10 @@
       <img src="img/ArthurBlackcurrentlogo.png">
     </div>
 
-  
-      <a href="#" class="downArrow">
-        <img src="img/down_arrow.png">
-      </a>
+
+    <a href="#" class="downArrow">
+      <img src="img/down_arrow.png">
+    </a>
 
 
   </div>
@@ -164,9 +166,10 @@
 
       <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
       <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.3/js/vendor/modernizr.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.1/js/vendor/modernizr.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.1/js/vendor/fastclick.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.1/js/foundation.min.js"></script>
-      <script src="js/app.js"></script>
+      <script src="app.js"></script>
       <script>
         $(document).foundation();
       </script>
