Use correct CSS tag and switch CDN

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Arthur Black Design</title>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.1/css/normalize.min.css"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.1/css/foundation.min.css"></script>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/5.4.4/css/foundation.min.css"/>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/normalize/3.0.1/normalize.min.css"/>
   <link rel="stylesheet" href="app.css"/>
 </head>
 
